# MYFIRSTGAME

./: .gitignore  CMakeLists.txt  vcpkg.json
assets/: main.cpp
src/: main.cpp
